# CEF_OpenCV

./: CMakeLists.txt  MyApp.cpp  MyApp.h  MyClient.cpp  MyClient.h  README.md  RenderHandler.cpp  RenderHandler.h  V8Handler.cpp  V8Handler.h  ipc_const.h  main.cpp
cef_binary_150.0.11/: Doxyfile  MODULE.bazel  README.md  README.txt
cef_binary_150.0.11/Resources/: chrome_100_percent.pak  chrome_200_percent.pak
cef_binary_150.0.11/Resources/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
cef_binary_150.0.11/include/: cef_api_versions.h  cef_color_ids.h  cef_command_ids.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
cef_binary_150.0.11/include/capi/test/: cef_test_server_capi.h
cef_binary_150.0.11/include/capi/views/: cef_textfield_capi.h
cef_binary_150.0.11/libcef_dll/ctocpp/test/: test_server_connection_ctocpp.cc  test_server_connection_ctocpp.h
cef_binary_150.0.11/libcef_dll/ctocpp/views/: textfield_ctocpp.cc  textfield_ctocpp.h
cef_binary_150.0.11/tests/ceftests/: BUILD.bazel  CMakeLists.txt
html/: index.html
opencv/lib/: opencv_img_hash490.lib  opencv_img_hash490d.lib
